--- a/sass/main.scss
+++ b/sass/main.scss
@@ -46,6 +46,11 @@ input:focus {
 //    Utility Classes
 // =====================
 
+%max-width-section {
+  width: 100%;
+  max-width: 600px;
+}
+
 %flex-center {
   display: flex;
   justify-content: center;
@@ -53,6 +58,7 @@ input:focus {
 }
 
 .page-container {
+  margin: 0 auto;
   height: 100%;
   width: 100%;
   max-width: 1200px;
@@ -111,13 +117,19 @@ input:focus {
 // ============
 
 .hero {
+  width: 100%;
   height: 30vh;
+  max-height: 250px;
   @extend %flex-center;
   flex-direction: column;
 
   &--text {
+    @extend %flex-center;
+    flex-direction: column;
+    height: 85%;
+    width: 100%;
     position: relative;
-    padding: 4rem 16rem;
+    // padding: 4rem 16rem;
     text-align: center;
     background: rgba(0, 0, 0, .3);
 
@@ -128,15 +140,33 @@ input:focus {
     
     &__sub {
       font-size: 2rem;
+      color: white;
     }
   }
 }
+
+// ===========
+//    MAIN
+// ===========
+
+main {
+  margin: 0 auto;
+  height: 70vh;
+  max-height: 600px;
+  width: 100%;
+  max-width: 900px;
+  @extend %flex-center;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
 
 // ===============
 //    COUNTDOWN
 // ===============
 
 .count-down {
+  @extend %max-width-section;
   @extend %flex-center;
   justify-content: space-around;
   font-size: 5rem;
@@ -174,15 +204,16 @@ input:focus {
 // ==============
 
 .control-grid {
+  @extend %max-width-section;
   display: grid;
-  grid-row-gap: 1rem;
+  grid-row-gap: 2rem;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas:
     "tbox in-tbox in-tbox start"
     "short in-short in-short stop"
     "long in-long in-long reset";
-  align-items: center;
+  align-items: flex-end;
 
   & .btn {
     width: 13rem;
@@ -192,11 +223,14 @@ input:focus {
 
   & label {
     display: block;
+    color: white;
   }
-
+  
   & input {
     width: 100%;
     padding: 1rem 0;
+    font-size: 2.3rem;
+    color: white;
     background: transparent;
     border-bottom: .1rem solid $clr-primary-dark;
   }
@@ -242,9 +276,9 @@ input:focus {
 
 @keyframes scale-down-up {
   from {
-    transform: scale(.9) rotate(45deg);
+    transform: scale(.9);
   }
   to {
-    transform: scale(1.2) rotate(45deg);
+    transform: scale(1.2);
   }
 }
