--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,10 @@ input:focus {
   background: transparent !important;
 }
 
+header {
+  width: 100%;
+}
+
 .hero {
   width: 100%;
   height: 30vh;
@@ -169,8 +173,8 @@ main {
 
 .count-down__hours::after, .count-down__minutes::after, .count-down__seconds::after {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: -4%;
+  left: -1%;
   width: 100%;
   height: 100%;
   content: '';
@@ -301,9 +305,60 @@ main {
 }
 
 @media screen and (max-width: 800px) {
+  .page-container {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .count-down {
+    font-size: 4rem;
+  }
+  .count-down__hours, .count-down__minutes, .count-down__seconds {
+    height: 7rem;
+    width: 7rem;
+  }
   .count-down__hours::after, .count-down__minutes::after, .count-down__seconds::after {
     -webkit-animation-play-state: paused;
             animation-play-state: paused;
+  }
+  .control-grid {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-areas: "tbox short long" "in-tbox in-short in-long" "start stop reset";
+  }
+  .control-grid .btn {
+    padding: .7rem 1rem;
+    font-size: 1.6rem;
+  }
+  .control-grid #short-break-button {
+    content: 'Short';
+  }
+  .control-grid label {
+    text-align: center;
+  }
+  .control-grid input {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .control-grid .btn {
+    width: auto;
+    height: auto;
   }
 }
 /*# sourceMappingURL=main.css.map */
