--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 body {
-  background: url("../assets/nasa-galaxy.jpg") no-repeat center center/cover;
+  background: url("../assets/nasa-galaxy-extra-large.jpg") no-repeat center center/cover;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.6rem;
   line-height: 1.4;
@@ -130,6 +130,7 @@ header {
   width: 100%;
   position: relative;
   text-align: center;
+  text-transform: capitalize;
   background: rgba(0, 0, 0, 0.3);
 }
 
@@ -305,6 +306,9 @@ main {
 }
 
 @media screen and (max-width: 800px) {
+  body {
+    background: url("../assets/nasa-galaxy-medium.jpg") no-repeat center center/cover;
+  }
   .page-container {
     width: 100%;
     height: 100%;
