--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -1,4 +1,8 @@
 @media screen and (max-width: 800px) {
+  body {
+    background: url('../assets/nasa-galaxy-medium.jpg') no-repeat center center/cover;
+  }
+
   .page-container {
     width: 100%;
     height: 100%;
