--- a/sass/main.scss
+++ b/sass/main.scss
@@ -185,6 +185,7 @@ main {
     margin: 1rem;
     @extend %flex-center;
 
+    
     &::after {
       position: absolute;
       bottom: -4%;
@@ -192,13 +193,13 @@ main {
       width: 100%;
       height: 100%;
       content: '';
-
+      
       background: radial-gradient(transparent 50%, #fff);
       border: .1rem solid white;
       border-radius: 50%;
       transform-origin: 50% 50%;
-
-      animation: scale-down-up 1s ease infinite alternate;
+  
+      animation: scale-down-up 1s ease infinite alternate paused;
     }
   }
 }
@@ -278,6 +279,24 @@ main {
 
 }
 
+// ===============
+//    ANIMATION
+// ===============
+
+#toggler {
+  display: none;
+  &:checked{
+    ~ .count-down__hours,
+    ~ .count-down__minutes,
+    ~ .count-down__seconds {
+      &::after {
+        animation-name: scale-down-up;
+        animation-play-state: running;
+      }
+    }
+  }
+}
+
 @keyframes scale-down-up {
   from {
     transform: scale(.9);
@@ -286,5 +305,9 @@ main {
     transform: scale(1.2);
   }
 }
+
+// ===============
+//    MOBILE
+// ===============
 
 @import 'mobile';
